--- a/OSImageDownloadTool/Info.plist
+++ b/OSImageDownloadTool/Info.plist
@@ -4,18 +4,35 @@
 <dict>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.utilities</string>
-	<key>CFBundleIdentifier</key>
-	<string>com.Matvei.OSImageDownloadTool</string>
-	<key>CFBundleShortVersionString</key>
-	<string>0.0.1</string>
-	<key>CFBundleVersion</key>
-	<string>0.0.1</string>
 	<key>CFBundleDisplayName</key>
 	<string>OS Image Download Tool</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.Matvei.OSImageDownloadTool</string>
+	<key>CFBundleName</key>
+	<string>OS Image Download Tool</string>
+	<key>CFBundleShortVersionString</key>
+	<string>0.1</string>
+	<key>CFBundleVersion</key>
+	<string>0.1</string>
+	<key>CFBundlePackageType</key>
+	<string>AAPL</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>13.3</string>
+	<key>NSPrincipalClass</key>
+	<string>NSApplication</string>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+		<key>UIApplicationSupportsMultipleScenes</key>
+		<false/>
+	</dict>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<false/>
+		<true/>
 	</dict>
+	<key>NSNetworkVolumesUsageDescription</key>
+	<string>Это приложение использует интернет для загрузки файлов образов ОС.</string>
+	<key>NSDownloadsFolderUsageDescription</key>
+	<string>Это приложение сохраняет загружаемые файлы образов ОС в папку &quot;Загрузки&quot;.</string>
 </dict>
 </plist>
